# ft

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: args.rs  dimension.rs  main.rs  point.rs  rgb.rs
src/color/: mod.rs
src/display/: mod.rs  pixel.rs
src/font/: mod.rs  raster_iterator.rs
src/input/: mod.rs
src/spatial/: dimension.rs  mod.rs  point.rs
src/terminal/: cells.rs  event.rs  line.rs  lines.rs  mod.rs  parser.rs  renderer.rs  shell.rs
src/terminal/cells/: line.rs  mod.rs
