[package]
name = "ft"
version = "0.1.0"
authors = ["Piotr Dobiech"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
fontdue = "0.7.2"
framebuffer = "0.3.1"
log = "0.4.17"
lru = { version = "0.8.1", default-features = false }
nix = "0.25.0"
pico-args = "0.5.0"
simplelog = { version = "0.12.0", default-features = false }
